<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/ScreenBackground">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:background="?attr/colorPrimary"
                android:gravity="bottom|center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/loginTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:text="@string/sign_up"
                    android:textColor="?attr/colorSurface"
                    android:textSize="30sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:rotationX="180"
                android:scaleType="fitXY"
                android:src="@drawable/curve" />

            <LinearLayout
                android:id="@+id/loginForm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:background="?attr/colorSurface"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/full_name_label"
                    android:textColor="@color/soft_black"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/fullNameTb"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/input_background"
                    android:hint="@string/full_name_hint"
                    android:inputType="text"
                    android:paddingHorizontal="16dp"
                    android:textColor="?attr/colorOnSurface"
                    android:textColorHint="@color/grey" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email_label"
                    android:textColor="?attr/colorOnSurface"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/emailTb"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/input_background"
                    android:hint="@string/email_hint"
                    android:inputType="text"
                    android:paddingHorizontal="16dp"
                    android:textColor="?attr/colorOnSurface"
                    android:textColorHint="@color/grey" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mobile_phone_label"
                    android:textColor="?attr/colorOnSurface"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/mobilePhoneTb"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/input_background"
                    android:hint="@string/mobile_phone_hint"
                    android:inputType="text"
                    android:paddingHorizontal="16dp"
                    android:textColor="?attr/colorOnSurface"
                    android:textColorHint="@color/grey" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/upload_profile_picture"
                    android:textColor="?attr/colorOnSurface"
                    android:textSize="14sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center_horizontal"
                    android:background="@drawable/input_background"
                    android:layout_marginBottom="24dp">

                    <ImageView
                        android:id="@+id/profileImageView"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:src="@drawable/ic_image_placeholder"
                        android:layout_marginBottom="12dp"
                        android:scaleType="centerCrop"
                        android:clickable="true"
                        android:focusable="true"
                         />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tap_to_select_profile"
                        android:textSize="12sp"
                        android:textColor="?attr/colorOnSurface"
                        android:layout_marginBottom="18dp"/>
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dob_label"
                    android:textColor="?attr/colorOnSurface"
                    android:textSize="14sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    >

                </LinearLayout>

                <EditText
                    android:id="@+id/dobTb"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/input_background"
                    android:hint="@string/dob_hint"
                    android:inputType="date"
                    android:paddingHorizontal="16dp"
                    android:textColor="?attr/colorOnSurface"
                    android:textColorHint="@color/grey" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/height_label"
                    android:textColor="?attr/colorOnSurface"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/height"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/input_background"
                    android:hint="@string/height_label"
                    android:inputType="numberDecimal"
                    android:paddingHorizontal="16dp"
                    android:textColor="?attr/colorOnSurface"
                    android:textColorHint="@color/grey" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/weight_label"
                    android:textColor="?attr/colorOnSurface"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/weight"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/input_background"
                    android:hint="@string/weight_label"
                    android:inputType="numberDecimal"
                    android:paddingHorizontal="16dp"
                    android:textColor="?attr/colorOnSurface"
                    android:textColorHint="@color/grey" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/password_label"
                    android:textColor="?attr/colorOnSurface"
                    android:textSize="14sp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginBottom="24dp">

                    <EditText
                        android:id="@+id/passwordTb"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/input_background"
                        android:hint="@string/password_hint"
                        android:inputType="textPassword"
                        android:paddingHorizontal="16dp"
                        android:textColor="?attr/colorOnSurface"
                        android:textColorHint="@color/grey" />

                    <ImageView
                        android:id="@+id/passwordToggle"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="12dp"
                        android:src="@drawable/eye_off" />
                </RelativeLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/confirm_password_label"
                    android:textColor="?attr/colorOnSurface"
                    android:textSize="14sp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="48dp" >
                    <EditText
                        android:id="@+id/confirmPasswordTb"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/input_background"
                        android:hint="@string/confirm_password_hint"
                        android:inputType="textPassword"
                        android:paddingHorizontal="16dp"
                        android:textColor="?attr/colorOnSurface"
                        android:textColorHint="@color/grey" />

                    <ImageView
                        android:id="@+id/confirmPasswordToggle"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="12dp"
                        android:src="@drawable/eye_off" />
                </RelativeLayout>

                <TextView
                    android:id="@+id/signupBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/terms"
                    android:textAlignment="center"
                    android:textColor="?attr/colorOnSurface"
                    android:textSize="14sp" />

                <Button
                    android:id="@+id/registerBtn"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="32dp"
                    android:backgroundTint="?attr/colorPrimaryContainer"
                    android:text="@string/sign_up"
                    android:textColor="?attr/colorPrimary"
                    android:textStyle="bold" />
            </LinearLayout>

            <TextView
                android:id="@+id/backToLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/back_to_login"
                android:textColor="?attr/colorOnSurface"
                android:textStyle="bold"
                android:textSize="14sp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="30dp"/>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
