<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    style="@style/ScreenBackground"
    android:gravity="">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:background="?attr/colorPrimary"
        android:gravity="bottom|center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/logoImageView"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/logo"
            android:background="@drawable/white_circle"
            android:scaleType="centerInside"/>

        <TextView
            android:id="@+id/appNameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="NaSi\nGoYeng"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="50sp"
            android:textStyle="bold" />
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:rotationX="180"
        android:scaleType="fitXY"
        android:src="@drawable/curve" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="top|center">

        <TextView
            android:id="@+id/welcomeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/onboarding_title_3"
            android:textColor="?attr/colorOnSurface"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/welcomeDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/onboarding_desc_3"
            android:textAlignment="center"
            android:textSize="12sp"
            android:layout_marginTop="8dp"
            android:textColor="?attr/colorOnSurface" />

        <Button
            android:id="@+id/registerBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/onboarding3_register"
            android:layout_marginTop="24dp"
            android:backgroundTint="?attr/colorPrimaryContainer"
            android:textColor="?attr/colorPrimary" />

        <Button
            android:id="@+id/loginBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/onboarding3_login"
            android:layout_marginTop="12dp"
            android:backgroundTint="?attr/colorPrimaryContainer"
            android:textColor="?attr/colorPrimary" />
    </LinearLayout>

</LinearLayout>



